[build-system]
requires = ['setuptools', 'wheel', 'poetry']

[tool.poetry]
name = "curandera"
version = "0.1.0"
description = "Heal the sickness of CMake"
authors = ["Isabella Muerte <63051+slurps-mad-rips@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/slurps-mad-rips/curandera"
keywords = ["cmake", "ninja", "occult", "build-system"]
packages = [ { include = "curandera", from = "src" } ]
include = [
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "SUPPORT.md",
  "tests/",
  "docs/",
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.scripts]
cura = 'curandera:__main__.main'

[tool.poetry.dependencies]
python = "3.7"
cmake = "^3.12"
ninja = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^3.7"
sphinx = "^1.7"
pylint = "^2.1"
coverage = "^4.5"
codecov = "^2.0"
towncrier = "^18.6"
