[metadata]
name = curandera
version = 0.1
description = Heal the sickness of using CMake
long_description_content_type = text/markdown
long_description = file: Readme.md
author_email =
license = MIT
author = Isabella Muerte
url = https://github.com/slurps-mad-rips/curandera
classifiers =
  Intended Audience :: Developers
  Operating System :: POSIX
  Operating System :: POSIX :: BSD
  Operating System :: POSIX :: Linux
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Topic :: Software Development :: Build Tools
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython

[options]
include_package_data = True
zip_safe = True
packages = find:
package_dir =
  = src

install_requires =
  colorama;sys_platform == 'win32'
  logbook
  cmake
  ninja

[options.entry_points]
console_scripts =
  cura=curandera:__main__:main

[aliases]
clean = clean --all
docs = build_sphinx
test = pytest

[build_sphinx]
project = Curandera
version = 0.1
release = 0.1.0
source-dir = docs
build-dir = build
builder = html

[coverage:run]
branch = True

[pylint]
disable = unused-variable,missing-docstring,missing-final-newline,trailing-whitespace,multiple-statements,invalid-name,bad-whitespace

[tool:pytest]
addopts = 
